--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,13 @@ code {
 }
 
 .forecast-card {
-  width: 300px;
-  height: 200px;
+  width: 350px;
+  height: 250px;
   background: #C4C4C4;
   text-align: center;
   border-radius: 20px;
   margin-bottom: 5px;
+  margin-right: 5px;
 }
 
 @media only screen and (max-width: 1050px) {
