--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,13 @@ code {
 
 .forecast-card {
   width: 350px;
-  height: 250px;
+  height: 270px;
   background: #C4C4C4;
   text-align: center;
   border-radius: 20px;
   margin-bottom: 5px;
   margin-right: 5px;
+  padding: 10px;
 }
 
 @media only screen and (max-width: 1050px) {
