--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,23 @@ code {
 .showNightButton {
   width: 100%;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+
+.support-me {
+  position: absolute;
+  bottom:0;
+  left:0;
+}
+
+.support-me > img {
+  width: 200px;
+}
